20060316
 - (dtucker) [entropy.c] Add headers for WIFEXITED and friends.
 - (dtucker) [configure.ac md-sha256.c] NetBSD has sha2.h in
   /usr/include/crypto.  Hint from djm@.

20060315
 - (djm) OpenBSD CVS Sync:
   - msf@cvs.openbsd.org 2006/02/06 15:54:07
     [ssh.1]
     - typo fix
     ok jmc@
   - jmc@cvs.openbsd.org 2006/02/06 21:44:47
     [ssh.1]
     make this a little less ambiguous...
   - stevesk@cvs.openbsd.org 2006/02/07 01:08:04
     [auth-rhosts.c includes.h]
     move #include <netgroup.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/07 01:18:09
     [includes.h ssh-agent.c ssh-keyscan.c sshconnect2.c]
     move #include <sys/queue.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/07 01:42:00
     [channels.c clientloop.c clientloop.h includes.h packet.h]
     [serverloop.c sshpty.c sshpty.h sshtty.c ttymodes.c]
     move #include <termios.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/07 01:52:50
     [sshtty.c]
     "log.h" not needed
   - stevesk@cvs.openbsd.org 2006/02/07 03:47:05
     [hostfile.c]
     "packet.h" not needed
   - stevesk@cvs.openbsd.org 2006/02/07 03:59:20
     [deattack.c]
     duplicate #include
   - stevesk@cvs.openbsd.org 2006/02/08 12:15:27
     [auth.c clientloop.c includes.h misc.c monitor.c readpass.c]
     [session.c sftp.c ssh-agent.c ssh-keysign.c ssh.c sshconnect.c]
     [sshd.c sshpty.c]
     move #include <paths.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/08 12:32:49
     [includes.h misc.c]
     move #include <netinet/tcp.h> out of includes.h; ok markus@
   - stevesk@cvs.openbsd.org 2006/02/08 13:15:44
     [gss-serv.c monitor.c]
     small KNF
   - stevesk@cvs.openbsd.org 2006/02/08 14:16:59
     [sshconnect.c]
     <openssl/bn.h> not needed
   - stevesk@cvs.openbsd.org 2006/02/08 14:31:30
     [includes.h ssh-agent.c ssh-keyscan.c ssh.c]
     move #include <sys/resource.h> out of includes.h; ok markus@